--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3,40 +3,40 @@ html {
 }
 
 .btn {
-    border: 1px solid #f00;
+    border: 1px solid #ff1744;
     padding: 5px 16px;
     border-radius: 3px;
     text-decoration: none;
-    background-color: red;
+    background-color: #ff1744;
     color: white;
     font-weight: 700;
 }
 
 .btn:hover {
-    background: white;
-    color: red;
+    color: white;
+    background: #ff616f;
 }
 
 .primary-btn {
-    background-color: rgb(18, 201, 18);
+    background-color: #00e676;
     color: white;
-    border-color: rgb(18, 201, 18);
+    border-color: #00e676;
 }
 
 .primary-btn:hover {
-    background: white;
-    color: rgb(18, 201, 18);
+    color: white;
+    background: #66ffa6;
 }
 
 .secondary-btn {
-    background: blue;
+    background: #03a9f4;
     color: white;
-    border-color: blue;
+    border-color: #03a9f4;
 }
 
 .secondary-btn:hover {
-    background: white;
-    color: blue;
+    color: white;
+    background: #67daff;
 }
 
 .title {
